--- a/Theory/Concepts.tex
+++ b/Theory/Concepts.tex
@@ -107,6 +107,15 @@ There are various concepts in probability theory and linear algebra that we keep
 \section{Eigen Value decomposition}
 \section{Singular value decomposition}
 \section{Gram Schmidt Orthogonalization}
+\section{Positive Definite Matrix}
+	A symmetric (Hermitian) $n \times n$ real ( complex) matrix $M$ is said to be Positive Definite if $z^TMz > 0$ for every non-zero vector $z$. In case of positive semidefinite, $z^TMz \ge 0$. 
+	
+	\subsection{Properties of Positive definite matrix}
+		Let $M$ be an $n \times n$ symmetric matrix.
+		\begin{itemize}
+			\item All it's eigen values are positive. 
+			\item For any real invertible matrix $A$, $A^{T}A$ is positive definite
+		\end{itemize}
 \section{Covariance Matrix}
 Let $\textbf{X} = \{X_1, X_2 \cdots X_n\}$ be a random vector. Then, 
 \begin{equation}
